# ChangeLog for gentoo/src/catalyst 
# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.206 2005/04/06 02:44:37 rocket Exp $

  06 Apr 2005; Eric Edgar <rocket@gentoo.org>
  targets/support/chroot-functions.sh, targets/support/kmerge.sh:
  Added tests for genkernel >3.2.0

  05 Apr 2005; Eric Edgar <rocket@gentoo.org> catalyst:
  Fixed email address

  05 Apr 2005; Chris Gianelloni <wolf31o2@gentoo.org> AUTHORS:
  Updated AUTHORS with new maintainers and updated contributors list.

  05 Apr 2005; Chris Gianelloni <wolf31o2@gentoo.org> catalyst,
  examples/fsscript.sh.example, livecd/files/README.txt,
  livecd/files/livecd-bash_profile, livecd/files/livecd-bashrc,
  livecd/files/minimal.motd.txt, livecd/files/universal.motd.txt,
  targets/support/gamecdfs-update.sh, targets/support/livecdfs-update.sh:
  Changed maintainers. Updated examples/fsscript.sh.example to provide better
  documentation. Lots of minor cosmetic updates. Updated minimal.motd.txt and
  universal.motd.txt to resolve documentation issue on bug #86914. Added
  x-setup to default runlevel on gamecd builds. Removed extranneous bashlogin
  sed-fu from livecdfs-update.sh and made default timezone UTC rather than
  GMT.

  05 Apr 2005; Eric Edgar <rocket@gentoo.org>
  targets/livecd-stage2/livecd-stage2-controller.sh:
  Removed a few unnecessary comments

  05 Apr 2005; Eric Edgar <rocket@gentoo.org> :
  Removed obsolete files from the livecd directory as the functionality has
  moved into the targets folders

  04 Apr 2005; Eric Edgar <rocket@gentoo.org>
  +targets/netboot/netboot-chroot.sh, +targets/netboot/netboot-controller.sh:
  Additional catalyst 2.0.0 files

  04 Apr 2005; Eric Edgar <rocket@gentoo.org> catalyst, arch/arm.py,
  +livecd/cdtar/grub-memtest86+-cdtar.tar.bz2,
  +livecd/cdtar/isolinux-2.11-cdtar.tar.bz2,
  +livecd/cdtar/isolinux-2.11-memtest86+-cdtar.tar.bz2,